crates/clx/src/dashboard/settings/snapshots/clx__dashboard__settings__render__render_snapshots__dashboard_ui_settings_edit_mode_popup.snap
---
source: crates/clx/src/dashboard/settings/render.rs
expression: rendered
---
┌ Sections ──────────┐┌ Validator - <CONFIG_PATH>                                                   
│> Validator         ││Field                    Value                      Default                 █
│  Context           ││                                                                            █
│  LLM               ││enabled                  true                       true                    █
│  User Learning     ││layer0_enabled           true                       true                    █
│  Logging           ││layer1_enabled           true                       true                    █
│  Ctx Pressure      ││layer1_timeout_ms        30000                      30000                   █
│  Sess Recovery     ││default_decision         ask                        ask                     █
│  MCP Tools         ││trust_mode               false                      false                   █
│  Auto Recall       ││auto_allow_reads         true                       true                    █
│                    ││trust_mode_default_durat 3600                       3600                    █
│                    ││trust_mode_max_duration  86400                      86400                   █
│                    ││                                                                            █
│                    ││                                                                            █
│                    ││  ┌ Edit: enabled ─────────────────────────────────┐                        █
│                    ││  │Enable command validation                       │                        █
│                    ││  │                                                │                        █
│                    ││  │Value: [42|]                                    │                        █
│                    ││  │                                                │                        █
│                    ││  │Default: true                                   │                        █
│                    ││  │                                                │                        █
│                    ││  │                                                │                        █
│                    ││  │[Enter] Confirm   [Esc] Cancel                  │                        █
│                    ││  │                                                │                        █
│                    ││  │                                                │                        █
│                    ││  └────────────────────────────────────────────────┘                        █
│                    ││                                                                            █
│                    ││                                                                            █
│                    ││                                                                            █
│                    ││                                                                            █
│                    ││                                                                            █
│                    ││                                                                            █
│                    ││                                                                            █
│                    ││                                                                            ║
│                    ││                                                                            ║
│                    ││                                                                            ║
│                    ││                                                                            ║
│                    ││                                                                            ║
│                    ││                                                                            ║
└────────────────────┘└────────────────────────────────────────────────────────────────────────────↓
